# analyzing_and_extracting_content_from_a_msoffice_file

./: exercise_2_2.ipynb  pyproject.toml
ocr_1bdbb2a88fc9b48a4d29ae76aafadf16/.ipynb_checkpoints/: image1-checkpoint.txt
ocr_240c5875a9ba744f6c61ff42a4d7d999/: image1.txt
ocr_46b138cf8645b457b2a8c4ebc79e06f1/: image1.txt
ocr_results/pdf1/: page1_img2.txt  page1_img3.txt  page3_img1.txt  page3_img2.txt
ocr_results/pdf1/.ipynb_checkpoints/: page1_img2-checkpoint.txt  page1_img3-checkpoint.txt  page3_img1-checkpoint.txt  page3_img2-checkpoint.txt  page8_img1-checkpoint.txt
ocr_results/pdf2/: page10_img1.txt  page11_img1.txt  page13_img1.txt  page13_img2.txt  page1_img1.txt  page1_img2.txt  page3_img1.txt  page3_img2.txt  page6_img1.txt
ocr_results/pdf2/.ipynb_checkpoints/: page1_img1-checkpoint.txt
ocr_results/pdf3/: page10_img1.txt  page11_img1.txt  page12_img1.txt  page13_img2.txt  page1_img1.txt  page1_img2.txt  page3_img1.txt  page4_img1.txt  page6_img1.txt  page9_img1.txt
