[project]
name = "exercise-2-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fitz>=0.0.1.dev2",
    "frontend>=0.0.3",
    "jupyterlab>=4.4.10",
    "matplotlib>=3.10.7",
    "oletools>=0.60.2",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "pymupdf>=1.26.6",
    "pytesseract>=0.3.13",
]
